small table adjustments

--- a/weall/WeddingAllocation.ipynb
+++ b/weall/WeddingAllocation.ipynb
@@ -540,7 +540,7 @@
     }
    ],
    "source": [
-    "s = [10, 10, 8, 8]\n",
+    "s = [9, 9, 9, 9]\n",
     "print('Number of seats over all tables: '+str(sum(s)))"
    ]
   },
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,16 +572,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[-1036.0, 716.0, 688.0, 608.0]"
+       "[-1244.0, 666.0, 926.0, 1012.0]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -592,14 +592,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total satisfaction is: 976.0\n"
+      "Total satisfaction is: 1360.0\n"
      ]
     }
    ],
@@ -616,13 +616,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "# extract 2 people at random and let them trade seats if the sum of the table scores improves\n",
     "ts = list(range(4))\n",
-    "for _ in range(1000):\n",
+    "for _ in range(10000):\n",
     "    \n",
     "    # random table\n",
     "    t1,t2 = rd.sample(set(ts), 2)\n",
@@ -649,17 +649,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Table 1 satisfaction: 858.0\n",
-      "Table 2 satisfaction: 842.0\n",
-      "Table 3 satisfaction: 726.0\n",
-      "Table 4 satisfaction: 996.0\n"
+      "Table 1 satisfaction: 736.0\n",
+      "Table 2 satisfaction: 1010.0\n",
+      "Table 3 satisfaction: 872.0\n",
+      "Table 4 satisfaction: 900.0\n"
      ]
     }
    ],
@@ -673,14 +673,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "New total satisfaction is: 3422.0\n"
+      "New total satisfaction is: 3518.0\n"
      ]
     }
    ],
@@ -697,42 +697,42 @@
      "data": {
       "text/plain": [
        "[        score\n",
-       " Alina   102.0\n",
-       " Alex     99.0\n",
        " Chris    99.0\n",
        " Mark     99.0\n",
-       " Erik    103.0\n",
+       " Chae      9.0\n",
+       " Erik    107.0\n",
        " Sarah   100.0\n",
-       " Lorenz  110.0\n",
-       " Stef    110.0\n",
+       " Lorenz  111.0\n",
+       " Stef    111.0\n",
        " Cruz     19.0\n",
        " Marcel   17.0,          score\n",
-       " Ingrid    15.0\n",
-       " Pirmin   109.0\n",
-       " Sophie   109.0\n",
-       " Helga     15.0\n",
+       " Ingrid    25.0\n",
+       " Alina    119.0\n",
+       " Alex     119.0\n",
+       " Pirmin   119.0\n",
+       " Sophie   119.0\n",
+       " Helga     25.0\n",
        " Anja      99.0\n",
        " Eckhard   99.0\n",
-       " Tommy     99.0\n",
-       " Tanja     99.0\n",
-       " Lukas     99.0\n",
-       " Merle     99.0,            score\n",
-       " Juri        35.0\n",
-       " Adler      111.0\n",
-       " Melanie A  104.0\n",
+       " Burak      0.0,            score\n",
+       " Juri        40.0\n",
+       " Tommy      118.0\n",
+       " Tanja      116.0\n",
+       " Adler      118.0\n",
+       " Melanie A  116.0\n",
        " Roman      118.0\n",
        " Sofia      114.0\n",
        " Toby       118.0\n",
-       " Melanie K  114.0\n",
-       " Burak       12.0,             score\n",
+       " Melanie K  114.0,             score\n",
        " Jorg         99.0\n",
        " Carola       99.0\n",
-       " Chae          3.0\n",
        " Uli         198.0\n",
        " Kim         198.0\n",
        " Anna-Luisa  198.0\n",
-       " Jakob       102.0\n",
-       " Jeannine     99.0]"
+       " Jakob        99.0\n",
+       " Jeannine     99.0\n",
+       " Lukas        99.0\n",
+       " Merle        99.0]"
       ]
      },
      "execution_count": 15,
